variables.RunHalf.scala.error
Compilation error:
RunHalf:9: error: not found: value baggle
    baggle = baggle + 1
    ^