variables.RunHalf.scala.code
var baggles = 0
var orangeCells = 0

while(2*baggles < orangeCells + 1) {
  if(isOverOrange){
    orangeCells = orangeCells + 1
  }
  if(isOverBaggle){
    baggle = baggle + 1
  }
}